feat(cleaner): add a cleaner to remove consecutive useless 0 in data

--- a/data/data/Makefile
+++ b/data/data/Makefile
@@ -7,17 +7,18 @@ build:
 
 init:
 	mkdir -p $(EXE_PATH)
-	mkdir -p index
 
 run:
 	./$(EXE_PATH)/train
 	./$(EXE_PATH)/spliter
 	./$(EXE_PATH)/pred
+	./$(EXE_PATH)/cleaner
 
 compile:
 	g++ train.cpp -o $(EXE_PATH)/train -std=c++20 -O3
 	g++ spliter.cpp -o $(EXE_PATH)/spliter -std=c++20 -O3
 	g++ pred.cpp -o $(EXE_PATH)/pred -std=c++20 -O3
+	g++ cleaner.cpp -o $(EXE_PATH)/cleaner -std=c++20 -O3
 
 clean:
 	rm __exe__/* -rf
