--- a/data/data/Makefile
+++ b/data/data/Makefile
@@ -13,12 +13,14 @@ run:
 	./$(EXE_PATH)/spliter
 	./$(EXE_PATH)/pred
 	./$(EXE_PATH)/cleaner
+	./$(EXE_PATH)/flatten
 
 compile:
 	g++ train.cpp -o $(EXE_PATH)/train -std=c++20 -O3
 	g++ spliter.cpp -o $(EXE_PATH)/spliter -std=c++20 -O3
 	g++ pred.cpp -o $(EXE_PATH)/pred -std=c++20 -O3
 	g++ cleaner.cpp -o $(EXE_PATH)/cleaner -std=c++20 -O3
+	g++ flatten.cpp -o $(EXE_PATH)/flatten -std=c++20 -O3
 
 clean:
 	rm __exe__/* -rf
